@@ -1,10 +1,10 @@
-= Announce: RubyGems Release 0.8.9
+= Announce: RubyGems Release 0.8.10
 
-Version 0.8.9 is bug fix release.  In multi-user environments, it is
+Version 0.8.10 is bug fix release.  In multi-user environments, it is
 common to supply mulitple versions of gems (for example Rails),
 allowing individual users to select the version of the gem they
 desire.  This allows a user to be insulated from updates to that gem.
-RubyGems 0.8.9 fixes a problem where gems could occasionally become
+RubyGems 0.8.10 fixes a problem where gems could occasionally become
 confused about the current versions of libraries selected by the user.
 
 == What is RubyGems?
@@ -24,17 +24,17 @@ any gems needed by the software you selected.
 * About 230 different gems available (I say _about_ because I don't
   think "Bangkok" and "bangkok" are really different gems).
 * Over 30,000 downloads of the RubyGems software
-* 230075 gem loads
+* 230,075 gem loads
 
-If you are interested in finding out when new gems are release, there
-is an RSS feed at http://onestepback.org/gemwatch.rss.
+If you are interested in finding out when new gems are released, I
+maintain an RSS feed at http://onestepback.org/gemwatch.rss.
 
 == How can I get RubyGems?
 
 If you have a recent version of RubyGems (0.8.5 or later), then all
 you need to do is:
 
-  $ gem update --system   (again, might need to be admin/root)
+  $ gem update --system   (you might need to be admin/root)
 
 If you have an older version of RubyGems installed, then you can still
 do it in two steps:
